--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -1,21 +1,27 @@
 body {
     position: relative;
+    background: linear-gradient(to bottom, var(--black), var(--green));
+
 }
 
 .historic-images {
     min-height: 80vh;
-    margin: 12vh auto 1vw auto;
+    margin: 12vh auto 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     align-content: flex-start;
 }
 
+.historic-images-disappear {
+    opacity: 0.1;
+}
+
 .historic-images h4 {
     grid-column: span 3;
     margin: 5vw;
     text-align: center;
-    color: var(--green);
+    color: var(--white);
 }
 
 .cb-image {
@@ -26,11 +32,6 @@ body {
     max-width: 33vw;    
 }
 
-/* witout that the section doesn't still on top  */
-.zoom-image-section {
-    position: absolute;
-    top: 0;
-}
 
 .zoom-image {
     object-fit: contain;
@@ -42,15 +43,17 @@ body {
 
 .zoom-div {
     display: none;
-    margin: auto;
+    margin: 20svh auto 0 auto;
     min-height: fit-content;
-    max-width: 90vw;
-    /* background-color: aquamarine; */
+    max-width: 100vw;
     position: sticky;
-    top: 25vh;
     z-index: 2;
 }
 
 .test-show {
     display: flex;
+}
+
+.disappear {
+    display: none;
 }
