--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -1,7 +1,9 @@
 .media-and-contacts {
     display: grid;
     gap: 3vh;
-    background-color: var(--green);
+    /* background-color: var(--green); */
+    background: linear-gradient(to top, var(--black), var(--green));
+
     margin-bottom: 5vh;
     border-radius: 5rem 0 0 0;
 }
