--- a/stylesheet/produtos.css
+++ b/stylesheet/produtos.css
@@ -83,9 +83,9 @@ body {
         grid-column: span 4;
     }
 
-    .section-title {
+    /* .section-title {
         grid-column: span 4;
-    }
+    } */
 
     .all-products a p{
         min-height: 20vh;
