--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -321,7 +321,8 @@ body {
 
 /* REMOVE ARROWS UP AND DOWN */
 #cp::-webkit-inner-spin-button,
-#cP::-webkit-inner-spin-button
+#cP::-webkit-inner-spin-button,
+#phone-number::-webkit-inner-spin-button
  {
     appearance: none;
 }
