--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -15,7 +15,7 @@
 .cabaz-name-title {
     font-size: 2rem;
     color: var(--orange);
-    background-color: var(--white);
+    /* background-color: var(--white); */
     min-width: fit-content;
     padding: 0.5rem 1rem;
     border-radius: 1rem;
@@ -35,7 +35,7 @@
     border: solid var(--green-one) 0.2rem;
     margin: 0 5vw;
     border-radius: 5%;
-
+    color: var(--white);
 }
 
 .cabazPrice {
@@ -129,7 +129,7 @@
 
 .sugestion a span {
     text-align: center;
-    color: var(--white);
+    color: var(--black);
     font-size: 1.5rem;
 }
 /*
@@ -168,7 +168,7 @@
 .cabazContent h4 {
     font-weight: bold;
     background-color: transparent;
-    color: var(--white);
+    color: var(--black);
     padding: 0.3rem;
     min-width: max-content;
     text-transform: uppercase;
@@ -177,7 +177,7 @@
 .cabazContent span {
     background-color: var(--green);
     max-width: fit-content;
-    color: var(--white);
+    color: var(--black);
     font-weight: bold;
     margin: 0 auto;
     padding: 0.3rem;
@@ -230,14 +230,14 @@
         gap: 1rem;
         padding: 0;
     }
-    
+
     .add-to-cart-button {
         padding: 1rem;
     }
 
     .add-to-cart-button:hover {
-        background-color: var(--black);
-        color: var(--orange);
+        transition: 750ms;
+        background-color: var(--green);
     }
 
     .cabaz-content .cabaz-list{
@@ -246,7 +246,7 @@
         min-height: 80%;
         font-size: 1.5rem;
         line-height: 2.5rem;
-        background-color: var(--green);
+        /* background-color: var(--green); */
         color: var(--white);
         padding: 3rem;
         align-items: center;
@@ -290,7 +290,6 @@
         font-weight: bold;
         margin: 5vh auto;
         max-width: 70%;
-        background-color: var(--white);
         text-align: center;
     }
 
@@ -308,7 +307,7 @@
 
     .cabazContent h4 {
         background-color: transparent;
-        color: var(--white);
+        color: var(--black);
         border-radius: 0;
         font-size: 1.5rem;
     }
