--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -15,13 +15,12 @@ body {
     position: absolute;
     top: -10rem;
     bottom: 0;
-    opacity: 0.8;
+    opacity: 0.93;
 }
 
 .white-background {
     background: linear-gradient(to bottom, var(--black), var(--green));
     color: var(--white);
-
 }
 
 .cartList {
@@ -32,7 +31,6 @@ body {
     padding: 1rem 0;
     min-height: 60vh;
     margin: 10vh 0;
-
 }
 
 .cartList img {
@@ -86,7 +84,7 @@ body {
 }
 
 .box-2 .box-2-child span {
-    color: var(--white);
+    color: var(--black);
     font-size: 0.8rem;
     font-weight: bold;
     background-color: var(--green);
@@ -111,7 +109,7 @@ body {
 } 
 
 .priceToPay {
-    color: var(--white);
+    color: var(--black);
     font-weight: bold;
     background-color: var(--green-one);
     padding: 0.3rem;
