--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -6,6 +6,7 @@
     border: solid var(--green) 0.2rem;
     padding: 1rem;
     border-radius: 0.3rem;
+    color: var(--white);
 }
 
 .contactForm div:not(.introduction, .clientMessage) {
@@ -24,7 +25,7 @@
     border-left: none;
     border-right: none;
     background-color: transparent;
-    color: var(--black);
+    color: var(--white);
 }
 
 .contactForm div input::placeholder, 
@@ -39,6 +40,12 @@
     padding: 0.4rem;
     margin: 0;
     resize: vertical;
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.contactForm div textarea:hover {
+    border-color: var(--orange);
 }
 
 .contactForm div label span {
@@ -58,7 +65,7 @@
 }
 
 .introduction .introductionText {
-    color: var(--black);
+    color: var(--white);
     text-align: justify;
     font-size: 0.8rem;
 }
