--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -15,6 +15,9 @@
     --white-two: rgb(245, 245, 245, 0.6);
     --black: rgba(0,0,0,1);
     --gray: rgba(0,0,0,0.5);
+    --black-hover-img: rgba(0,0,0,0.6);
+    --green-hover-img: rgb(136, 171, 142, 0.6);
+
 }
 
 .dark-theme {
@@ -26,7 +29,7 @@
 
 body {
     position: relative;
-    background-color: var(--white);
+    background-color: var(--black);
 }
 
 header {
@@ -38,10 +41,11 @@ header {
     min-width: 100%;
     max-width: 100vw;
     min-height: 9svh;
-    max-height: 10svh;
+    /* max-height: 10svh; */
     z-index: 99;
     padding: auto;
     display: grid;
+    /* display: none; */
 }
 /* NAVBAR */
 .navbar {
@@ -241,69 +245,43 @@ header .menu-list  a:hover {
 }
 
 .welcomeSection {
-    min-width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
-    max-height: 100vh;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0;
-    /* margin-top: 5vh; */
-    /* margin-top: 10vh; */
-    /* border: solid var(--black) 5px; */
+    /* min-height: 94vh; */
+    margin: 8vh 0 0 0;
 }
 
 .welcomeSection .title-div {
-    min-height: 33.3vh;
-    min-width: 50vw;
-    display: grid;
+    min-height: 30vh;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     color: var(--white);
-    /* min-height: 25vh;
-    min-width: 50vw; */
-    margin: auto;
-    background-color: var(--green);
-    /* border: solid var(--black) 5px; */
-    border: none;
-    outline: none;
+    padding: 0;
+    margin: 0;
+    background-image: url('/images/farm-img-homePage.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-image: linear-gradient(90deg,  var(--black-hover-img), var(--green-hover-img), var(--black-hover-img)) fill 1;
+    
+}
+
+.welcomeSection .title-div:nth-child(2) {
+    background-image: url('/images/farm-img-homePage2.jpg');
+}
+
+.welcomeSection .title-div:nth-child(3) {
+    background-image: url('/images/farm-img-homePage3.jpeg');
 }
 
 .welcomeSection .title-div h1 {
-    font-size: 1rem;
+    margin: 0 auto;
+    /* font-size: 1rem; */
 }
 
-/* .welcomeSection .title-div:first-child, */
-/* .welcomeSection .title-div:nth-child(1) {
-    align-items: flex-end;
+.reverse-flex-direction {
+    flex-direction: row-reverse;
 }
 
-.welcomeSection .title-div:nth-child(5) {
-    align-items: flex-start;
-} */
-
-.welcomeSection div img {
-    object-fit:cover;
-    max-width: fit-content;
-    max-height: fit-content;
-    /* border: solid var(--black) 5px; */
-    max-width: 50vw;
-    min-height: 33.3vh;
-    max-height: 33.3vh;
-}
-
-.welcomeSection div {
-    max-width: 50vw;
-    min-height: 33.3vh;
-    max-height: 33.3vh;
-    /* border: solid var(--orange) 5px; */
-}
-
-/* .welcomeSection div .hortaDaRia {
-    color: var(--white);
-    font-size: 1rem;
-} */
 body::-webkit-scrollbar {
     display: block;
     width: 0.5vw;
@@ -393,71 +371,13 @@ body::-webkit-scrollbar:vertical {
     }
 
     .welcomeSection {
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(7, 1fr);
-        align-items:  flex-start;
-        gap: 0;
-        background-color: var(--green);
-        overflow: hidden;
-        max-width: 100vw;
+        display: flex;
+        min-width: 100vw;
         min-height: 100vh;
     }
 
     .welcomeSection .title-div {
-        min-height: min-content;
-        min-width: 40dvw;
-    }
-
-    .welcomeSection div img{
-        max-width: 16.6vw;
-        min-height: 100vh;
-        transition: all 2000ms ease-in-out;
-    }
-
-    .welcomeSection div img:hover{
-        max-width: 40dvw;
-        z-index: 2;
-        cursor: pointer;
-    }
-
-    .welcomeSection div:nth-child(1) {
-        grid-column: 1 / span 1;
-        grid-row: 3 / span 1;
-    }
-
-    .welcomeSection div:nth-child(4) {
-        grid-column: 1 / span 1;
-        grid-row: 4 / span 1;
-    }
-
-    .welcomeSection div:nth-child(5) {
-        grid-column: 1 / span 1;
-        grid-row: 5 / span 1;
-    }
-
-    .welcomeSection div:nth-child(2) {
-        grid-column: 4 / span 1;
-        grid-row: 1 / span 7;
-    }
-    
-    .welcomeSection div:nth-child(3) {
-        grid-column: 5 / span 1;
-        grid-row: 1 / span 7;
-    }
-
-    .welcomeSection div:nth-child(6) {
-        grid-column: 6 / span 1;
-        grid-row: 1 / span 7;
-    }
-    
-    .welcomeSection .title-div {
-        color: var(--white);
-        background-color: var(--green);
-
-    }
-    .welcomeSection div .hortaDaRia {
-        color: var(--white);
-        background-color: transparent;
+        min-width: 33vw;
     }
 
     body {
