--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -27,6 +27,10 @@
     --red: ;
 }
 
+.display-none {
+    display: none;
+}
+
 body {
     position: relative;
     background-color: var(--black);
