--- a/stylesheet/videos.css
+++ b/stylesheet/videos.css
@@ -2,6 +2,16 @@
     display: grid;
     justify-content: center;
     margin: 12svh auto;
-    /* min-height: 80vh; */
     max-width: 100vw;
+}
+
+@media screen and (min-width: 700px) {
+    .video {
+        margin-top: 15vh;
+    }
+   
+    .video video {
+        width: 60vw;
+    }
+
 }
