--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    padding: 0;
     position: relative;
     background: linear-gradient(to bottom, var(--black), var(--green));
 
@@ -6,6 +8,7 @@ body {
 
 .historic-images {
     min-height: 80vh;
+    max-width: 100vw;
     margin: 12vh auto 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -32,7 +35,6 @@ body {
     max-width: 33vw;    
 }
 
-
 .zoom-image {
     object-fit: contain;
     height: 100%;
@@ -56,4 +58,30 @@ body {
 
 .disappear {
     display: none;
+}
+
+@media screen and (min-width: 700px) {  
+
+    .historic-images {
+        grid-template-columns: repeat(4, 1fr);
+        margin: 5vh 10vw;
+        justify-content: center;
+        gap: 1vh;
+    }
+    .cb-image {
+        min-height: 40vh;
+        max-height: 40vh;
+        min-width: 20vw;
+        max-width: 20vw;    
+    }
+    .historic-images h4 {
+        grid-column: span 4;
+    }
+    .zoom-div img{
+        margin:0 auto;
+        min-height: fit-content;
+        max-height: 70vh;
+        max-width: 35vw;
+        height: 100%;
+    }
 }
