--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -218,6 +218,12 @@
         min-height: 80vh;
     }
 
+    .cabaz-box {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
+    }
+
     .cabaz-name-title {
         margin: 0 auto;
     }
@@ -229,6 +235,8 @@
         justify-content: center;
         gap: 1rem;
         padding: 0;
+        grid-column: span 2;
+        min-width: 100%;
     }
 
     .add-to-cart-button {
@@ -243,13 +251,14 @@
     .cabaz-content .cabaz-list{
         border: solid var(--orange) 2px;
         border-radius: 1rem;
-        min-height: 80%;
-        font-size: 1.5rem;
-        line-height: 2.5rem;
+        /* min-height: 0%; */
+        font-size: 1rem;
+        line-height: 1.2rem;
         /* background-color: var(--green); */
         color: var(--white);
-        padding: 3rem;
+        padding: 1rem;
         align-items: center;
+       
     }
 
     /* SUGESTIONS  */
