changed findStockOfItems function
now, instead of set a display none to the item, appears the photo, name, price and a message saying no stock

--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -110,6 +110,10 @@
     text-align: center;
 }
 
+.introduction .introductionText {
+    font-size: 1rem;
+}
+
 .contactForm div:not(.introduction, .clientMessage) {
     display: flex;
     justify-content: space-around;
