--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -12,6 +12,7 @@
 
 .testimonials .testimonial-text {
     font-size: 0.7rem;
+    font-style: italic;
 }
 
 .testimonials .client-testimonial .date-and-job {
