--- a/stylesheet/basketHistoric.css
+++ b/stylesheet/basketHistoric.css
@@ -2,14 +2,14 @@ body {
     margin: 0;
     padding: 0;
     position: relative;
-    background: linear-gradient(to bottom, var(--black), var(--green));
+    /* background: linear-gradient(to bottom, var(--black), var(--green)); */
 
 }
 
 .historic-images {
     min-height: 80vh;
     max-width: 100vw;
-    margin: 12vh auto 0 auto;
+    margin: 12vh auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
@@ -24,7 +24,7 @@ body {
     grid-column: span 3;
     margin: 5vw;
     text-align: center;
-    color: var(--white);
+    color: var(--green);
 }
 
 .cb-image {
@@ -33,6 +33,10 @@ body {
     max-height: 20vh;
     min-width: 33vw;
     max-width: 33vw;    
+}
+
+.cb-image:hover {
+    cursor: pointer;
 }
 
 .zoom-image {
@@ -63,7 +67,7 @@ body {
 @media screen and (min-width: 700px) {  
 
     .historic-images {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         margin: 5vh 10vw;
         justify-content: center;
         gap: 1vh;
