--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -131,9 +131,11 @@
 @media screen and (min-width: 700px) {
 
      .media-and-contacts {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         margin-bottom: 0; 
         justify-content: space-between;
+        min-width: 100vw;
+        max-width: 100vw;
     } 
 
     .footer-head, .line-break {
@@ -178,13 +180,13 @@
 
     .media-and-contacts i:hover {
         border: solid var(--orange) 2px;
-        color: var(--orange);
+        color: var(--white);
     }
  
     .social-media {
         grid-column: span 1;
         padding: 1vw;
-        margin: 0 5vw;
+        margin: 0;
     }
 
     .info-tel span:nth-child(2) {
