--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -11,18 +11,18 @@
 .sabaoNatural,
 .plantasEmVaso {
     display: grid;
-    gap: 1vw;
-    grid-template-columns: repeat(2, 1fr);
+    gap: 3vw;
+    grid-template-columns: repeat(1, 1fr);
     max-width: 100vw;
     padding: 10vh 3vw;
     justify-content: center;
     /* border: solid red 1px; */
-    background-color: var(--black);
+    /* background-color: var(--black); */
     position: static;
 }
 
 .section-title {
-    grid-column: span 2;
+    grid-column: span 1;
     margin: 0 auto 1rem auto;
     font-size: 1rem;
     text-transform: uppercase;
@@ -35,43 +35,40 @@
 
 .boxItem {
     display: grid;
+    margin: 0 auto;
     grid-template-columns: repeat(2, 1fr);
     padding: 0.5rem;
     align-items: center;
-    max-height: max-content;
+    text-align: center;
+    max-height: 50vh;
+    min-height: 50vh;
     gap: 0.3rem;
     font-size: 1rem;
     font-weight: 700;
     border: solid var(--green-one) 2px;
-    background-color: var(--black);
+    background-color: var(--green-hover-img);
     border-radius: 0.5rem;
 }
 
 .boxItem h3 {
-    /* border: solid red 2px; */
     margin: 0 auto;
     text-transform: uppercase;
-    /* background-color: var(--yellow); */
     color: var(--orange);
     grid-column: span 2;
-    /* padding: 0.4rem; */
-    /* border-radius: 0.5rem; */
     font-size: 0.7rem;
     font-weight: bold;
     letter-spacing: 0.1rem;
     min-height: 2.6rem;
     max-width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 .boxItem img {
     grid-column: span 2;
     object-fit: cover;
-    max-height: 100%;
-    max-width: 100%;
+    min-height: 30vh;
+    max-height: 30vh;
+    max-width: 70vw;
+    min-width: 70vw;
     margin: 0 auto;
     border-radius: 0.5rem;
 }
@@ -80,11 +77,11 @@
 .boxItem .priceToPay {
     font-size: 0.8rem;
     font-weight: 600;
-    color: var(--white);
+    color: var(--black);
 }
 
 .boxItem select {
-    max-width: 100%;
+    max-width: 70%;
     border-radius: 0.1rem;
     font-size: 0.8rem;
     padding: 0.2rem auto;
@@ -104,14 +101,13 @@
 
 .boxItem button {
     background-color: var(--orange);
-    /* border: solid var(--orange) 2px; */
     border-radius: 0.3rem;
     padding: 0.3rem;
     color: var(--black);
     font-weight: 700;
     letter-spacing: 0.1rem;
     outline: none;
-    max-width: 100%;
+    max-width: 70%;
 }
 
 @media screen and (min-width: 700px) {
@@ -127,18 +123,30 @@
 .ovos,
 .sabaoNatural,
 .plantasEmVaso {
-    grid-template-columns: repeat(4, 1fr);
-    margin: 5vh auto;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 15vh auto;
+    max-width: 80vw;
+    padding: 0;
+}
+
+.section-title {
+    grid-column: span 2;
 }
 
 .boxItem img {
     min-height: 30vh;
     max-height: 30vh;
+    min-width: 30vh;
+    max-width: 30vh;
 }
 
 .boxItem h3 {
     font-size: 0.7rem;
     font-weight: bold;
+}
+
+.boxItem select {
+    min-width: fit-content;
 }
 
 .boxItem select:hover {
@@ -149,6 +157,10 @@
     color: var(--green-one);
     background-color: var(--white);
     cursor: pointer;
+}
+
+.boxItem button {
+    min-width: fit-content;
 }
 
 .boxItem button:hover {
@@ -173,11 +185,10 @@
     .ovos,
     .sabaoNatural,
     .plantasEmVaso {
-        grid-template-columns: repeat(6, 1fr);
-        max-width: 85vw;
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .section-title {
-        grid-column: span 6;
+        grid-column: span 4;
     }
 }
