--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -190,15 +190,12 @@
 
 
 /* PAGINA 1 APÓS AVANCAR */
-
-
-
 .client-data-sec form{
     margin-top: 9svh;
     display: grid;
     justify-content: center;
     align-items: center;
-    padding: 0 3vw;
+    /* padding: 0 3vw; */
     gap: 1rem;
     max-width: 100vw;
 }
@@ -213,7 +210,7 @@
 }
 
 .client-data-sec form section {
-    border: solid var(--green) 3px;
+    border: solid var(--green) 1px;
     border-radius: 1rem 0;
     padding: 1.5rem;
 }
