--- a/stylesheet/navAndSearch.css
+++ b/stylesheet/navAndSearch.css
@@ -39,7 +39,7 @@ header {
     top: 0;
     left: 0;
     background-color: var(--white);
-    min-width: 100%;
+    min-width: 100vw;
     max-width: 100vw;
     min-height: 9svh;
     /* max-height: 10svh; */
