--- a/stylesheet/carrinho.css
+++ b/stylesheet/carrinho.css
@@ -190,12 +190,18 @@
 
 
 /* PAGINA 1 APÓS AVANCAR */
+.client-data-sec {
+    max-width: 100vw;
+    margin: 0 auto;
+    display: grid;
+    justify-content: center;
+}
+
 .client-data-sec form{
-    margin-top: 9svh;
+    margin: 9svh auto;
     display: grid;
     justify-content: center;
     align-items: center;
-    /* padding: 0 3vw; */
     gap: 1rem;
     max-width: 100vw;
 }
