--- a/stylesheet/informations.css
+++ b/stylesheet/informations.css
@@ -30,3 +30,10 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+@media screen and (min-width: 700px) { 
+    .informations-sec {
+        margin-top: 12svh;
+        text-align: center;
+    }
+}
