--- a/stylesheet/cabaz.css
+++ b/stylesheet/cabaz.css
@@ -251,14 +251,12 @@
     .cabaz-content .cabaz-list{
         border: solid var(--orange) 2px;
         border-radius: 1rem;
-        /* min-height: 0%; */
         font-size: 1rem;
         line-height: 1.2rem;
-        /* background-color: var(--green); */
-        color: var(--white);
+        color: var(--black);
         padding: 1rem;
         align-items: center;
-       
+        text-align: center;
     }
 
     /* SUGESTIONS  */
