--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -1,3 +1,6 @@
+.display-none {
+    display: none;
+}
 
 .ervas,
 .saladas,
@@ -9,7 +12,9 @@
 .horticulas,
 .ovos,
 .sabaoNatural,
-.plantasEmVaso {
+.plantasEmVaso,
+.compotas,
+.cogumelos {
     display: grid;
     gap: 3vw;
     grid-template-columns: repeat(1, 1fr);
@@ -122,7 +127,9 @@
 .horticulas,
 .ovos,
 .sabaoNatural,
-.plantasEmVaso {
+.plantasEmVaso,
+.compotas,
+.cogumelos {
     grid-template-columns: repeat(2, 1fr);
     margin: 15vh auto;
     max-width: 80vw;
@@ -184,7 +191,9 @@
     .horticulas,
     .ovos,
     .sabaoNatural,
-    .plantasEmVaso {
+    .plantasEmVaso,
+    .compotas,
+    .cogumelos {
         grid-template-columns: repeat(4, 1fr);
     }
 
