--- a/stylesheet/testemunhos.css
+++ b/stylesheet/testemunhos.css
@@ -5,6 +5,16 @@
     padding: 0 5dvw;
 }
 
+.testimonials-flex {
+    display: flex;
+    overflow-x: scroll;
+    gap: 3lvw;
+}
+
+.testimonials-flex::-webkit-scrollbar {
+    display: none;
+}
+
 .testimonials .client-name {
     color: var(--orange);
     letter-spacing: 0.1rem;
@@ -38,6 +48,7 @@
     gap: 0.5rem;
     margin: 0 3vw;
     border-radius: 1rem 0 1rem 0;
+    min-width: 70lvw;
 }
 
 .testimonials .date-and-job {
