--- a/stylesheet/informations.css
+++ b/stylesheet/informations.css
@@ -33,7 +33,8 @@
 
 @media screen and (min-width: 700px) { 
     .informations-sec {
-        margin-top: 12svh;
+        margin: 12lvh auto 0 auto;
         text-align: center;
+        max-width: 60lvw;
     }
 }
