--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -85,24 +85,16 @@
         border-radius: 1rem;
         padding: 1rem;
     } 
-
-   
     
     .about-us-div {
         font-size: 1.5rem;
-        /* align-items: center; */
         max-width: 100vw;
-        text-align: justify;
+        text-align: center;
         grid-template-columns: repeat(2, 1fr);
-        justify-content: center;
+        justify-items: center;
         align-items: center;
         gap: 0;
         margin: 5vh auto;
-    }
-    .about-us-div .about-us-description p{
-        /* margin: 0 auto; */
-        /* text-align: center; */
-
     }
 
     .about-us-photo {
@@ -114,15 +106,13 @@
         object-fit: cover;
     }
 
-    .about-us-description {
-        /* max-width: 40vw; */
-
-    }
-
     .about-us-description p{
         color: var(--green);     
         font-size: 1rem;   
+        text-align: center;
+
     }
+
     .about-us-description h3 {
         background-color: var(--orange);
         color: var(--black);
@@ -136,5 +126,7 @@
 
     .description-two {
         grid-column: span 2;
+        max-width: 50lvw;
+        margin: 0 auto;
     }
 }
