--- a/stylesheet/ervasECha.css
+++ b/stylesheet/ervasECha.css
@@ -14,7 +14,8 @@
 .sabaoNatural,
 .plantasEmVaso,
 .compotas,
-.cogumelos {
+.cogumelos,
+.frutaDaEpoca {
     display: grid;
     gap: 3vw;
     grid-template-columns: repeat(1, 1fr);
@@ -132,7 +133,8 @@
 .sabaoNatural,
 .plantasEmVaso,
 .compotas,
-.cogumelos {
+.cogumelos,
+.frutaDaEpoca {
     grid-template-columns: repeat(2, 1fr);
     margin: 15vh auto;
     max-width: 80vw;
@@ -196,7 +198,8 @@
     .sabaoNatural,
     .plantasEmVaso,
     .compotas,
-    .cogumelos {
+    .cogumelos,
+    .frutaDaEpoca {
         grid-template-columns: repeat(4, 1fr);
     }
 
