--- a/stylesheet/styleAboutUs.css
+++ b/stylesheet/styleAboutUs.css
@@ -49,7 +49,7 @@
 }
 
 .about-us .about-us-description {
-    text-align: left;
+    text-align: justify;
     display: grid;
     justify-content: center;
     gap: 0.5rem;
@@ -57,7 +57,7 @@
 
 }
 
-.about-us-description p {
+.about-us-description p{
     color: var(--green);
     font-size: 0.9rem;
     font-weight: 500;
