--- a/stylesheet/contacts.css
+++ b/stylesheet/contacts.css
@@ -115,6 +115,29 @@
     font-style: oblique;
 }
 
+.termsAndConditions {
+   text-decoration: underline;
+   color: var(--black);
+   cursor: pointer;
+}
+
+
+
+.popUpTerms {
+    display: none;
+}
+
+.popUpTermsClicked {
+    display: grid;
+    background-color: var(--black);
+    color: var(--white);
+    min-height: 100lvh;
+    min-width: 100lvw;
+    top: 0;
+    position: fixed;
+    z-index: 99;
+}
+
 @media screen and (max-width: 350px) {
 
     .media-and-contacts {
